feat: introduce tenant demo pages and their associated image assets, and update index.html.

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="container position-relative z-1 pt-5">
             <div class="row align-items-center">
                 <div class="col-lg-7 text-center text-lg-start mb-5 mb-lg-0">
-                    <div <div
+                    <div
                         class="d-inline-flex align-items-center gap-2 px-3 py-1 rounded-pill glass-card mb-4 border-success border-opacity-25 animate-float bg-white">
                         <span class="badge bg-success rounded-pill" data-i18n="badge_new">New</span>
                         <span class="small text-secondary fw-medium">
@@ -255,9 +255,11 @@
     <section class="section-spacer position-relative bg-light" id="features">
         <div class="container">
             <div class="text-center mb-5">
-                <h2 class="display-5 fw-bold text-dark mb-3">Built for <span class="text-gradient-primary">Modern
+                <h2 class="display-5 fw-bold text-dark mb-3"><span data-i18n="features_title_1">Built for</span> <span
+                        class="text-gradient-primary" data-i18n="features_title_2">Modern
                         Teams</span></h2>
-                <p class="text-secondary lead">Everything you need to ship faster and stay organized.</p>
+                <p class="text-secondary lead" data-i18n="features_subtitle">Everything you need to ship faster and stay
+                    organized.</p>
             </div>
 
             <div class="row g-4">
@@ -266,8 +268,8 @@
                         <div class="feature-icon">
                             <i class="fas fa-brain"></i>
                         </div>
-                        <h4 class="text-dark fw-bold mb-3">AI Autopilot</h4>
-                        <p class="text-secondary mb-0">
+                        <h4 class="text-dark fw-bold mb-3" data-i18n="feature_ai_title">AI Autopilot</h4>
+                        <p class="text-secondary mb-0" data-i18n="feature_ai_desc">
                             GERDA AI automatically categorizes tickets, assigns priority, and even drafts responses
                             based on your knowledge base.
                         </p>
@@ -279,8 +281,8 @@
                             style="box-shadow: 0 0 15px rgba(245, 158, 11, 0.1); background: #fffbeb;">
                             <i class="fas fa-project-diagram"></i>
                         </div>
-                        <h4 class="text-dark fw-bold mb-3">Workflow Engine</h4>
-                        <p class="text-secondary mb-0">
+                        <h4 class="text-dark fw-bold mb-3" data-i18n="feature_workflow_title">Workflow Engine</h4>
+                        <p class="text-secondary mb-0" data-i18n="feature_workflow_desc">
                             Visual drag-and-drop workflow builder. Connect tickets to git commits, deployments, and
                             customer approvals.
                         </p>
@@ -292,8 +294,8 @@
                             style="box-shadow: 0 0 15px rgba(16, 185, 129, 0.1); background: #f0fdf4;">
                             <i class="fas fa-shield-virus"></i>
                         </div>
-                        <h4 class="text-dark fw-bold mb-3">Ironclad Security</h4>
-                        <p class="text-secondary mb-0">
+                        <h4 class="text-dark fw-bold mb-3" data-i18n="feature_security_title">Ironclad Security</h4>
+                        <p class="text-secondary mb-0" data-i18n="feature_security_desc">
                             Role-based access control (RBAC), audit logs, and self-hosted deployment options keep your
                             data sovereign.
                         </p>
@@ -348,7 +350,16 @@
                 hero_desc_2: "beautiful, intelligent operating system",
                 hero_desc_3: "for your business.",
                 btn_start_trial: "Start Free Trial",
-                btn_view_demos: "View Demos"
+                btn_view_demos: "View Demos",
+                features_title_1: "Built for",
+                features_title_2: "Modern Teams",
+                features_subtitle: "Everything you need to ship faster and stay organized.",
+                feature_ai_title: "AI Autopilot",
+                feature_ai_desc: "GERDA AI automatically categorizes tickets, assigns priority, and even drafts responses based on your knowledge base.",
+                feature_workflow_title: "Workflow Engine",
+                feature_workflow_desc: "Visual drag-and-drop workflow builder. Connect tickets to git commits, deployments, and customer approvals.",
+                feature_security_title: "Ironclad Security",
+                feature_security_desc: "Role-based access control (RBAC), audit logs, and self-hosted deployment options keep your data sovereign."
             },
             nl: {
                 nav_features: "Functies",
@@ -362,7 +373,16 @@
                 hero_desc_2: "prachtig, intelligent besturingssysteem",
                 hero_desc_3: "voor uw bedrijf.",
                 btn_start_trial: "Start Gratis Proefversie",
-                btn_view_demos: "Bekijk Demo's"
+                btn_view_demos: "Bekijk Demo's",
+                features_title_1: "Gebouwd voor",
+                features_title_2: "Moderne Teams",
+                features_subtitle: "Alles wat u nodig heeft om sneller te leveren en georganiseerd te blijven.",
+                feature_ai_title: "AI Autopilot",
+                feature_ai_desc: "GERDA AI categoriseert automatisch tickets, wijst prioriteit toe en stelt zelfs antwoorden op basis van uw kennisbank.",
+                feature_workflow_title: "Workflow Engine",
+                feature_workflow_desc: "Visuele drag-and-drop workflow builder. Verbind tickets met git commits, deployments en klantgoedkeuringen.",
+                feature_security_title: "IJzersterke Beveiliging",
+                feature_security_desc: "Role-based access control (RBAC), auditlogs en self-hosted deployment-opties houden uw gegevens soeverein."
             },
             fr: {
                 nav_features: "Fonctionnalités",
@@ -376,7 +396,16 @@
                 hero_desc_2: "système d'exploitation intelligent et magnifique",
                 hero_desc_3: "pour votre entreprise.",
                 btn_start_trial: "Essai Gratuit",
-                btn_view_demos: "Voir les Démos"
+                btn_view_demos: "Voir les Démos",
+                features_title_1: "Conçu pour",
+                features_title_2: "Équipes Modernes",
+                features_subtitle: "Tout ce dont vous avez besoin pour livrer plus rapidement et rester organisé.",
+                feature_ai_title: "Pilote Automatique IA",
+                feature_ai_desc: "GERDA AI catégorise automatiquement les tickets, attribue les priorités et rédige même des réponses basées sur votre base de connaissances.",
+                feature_workflow_title: "Moteur de Workflow",
+                feature_workflow_desc: "Constructeur de workflow visuel par glisser-déposer. Connectez les tickets aux commits git, déploiements et approbations clients.",
+                feature_security_title: "Sécurité Inébranlable",
+                feature_security_desc: "Contrôle d'accès basé sur les rôles (RBAC), journaux d'audit et options de déploiement auto-hébergé gardent vos données souveraines."
             }
         };
 
