feat: Configure Fly.io deployment with Docker and update all demo links to the live environment.

--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
                             <li><a class="dropdown-item small" href="#" onclick="setLang('fr')">Français</a></li>
                         </ul>
                     </div>
-                    <a href="../ticket-masala-tenants/site/index.html" class="btn btn-sm btn-glass rounded-pill px-3">
-                        Live Demos
-                    </a>
+                    <a href="https://ticket-masala-demos.fly.dev/" class="btn btn-sm btn-glass rounded-pill px-3"> <i class="fas fa-desktop me-1"></i> Live Demos </a>
                     <a href="https://github.com/yourusername/ticket-masala"
                         class="btn btn-sm btn-glow rounded-pill px-3">
                         <i class="fab fa-github me-1"></i> Star
@@ -160,11 +158,8 @@
                     </p>
 
                     <div class="d-flex flex-column flex-sm-row gap-3 justify-content-center justify-content-lg-start">
-                        <a href="../ticket-masala-tenants/site/index.html"
-                            class="btn btn-glow btn-lg rounded-pill px-5 py-3 fw-bold" data-i18n="btn_start_trial">
-                            Start Free Trial
-                        </a>
-                        <a href="../ticket-masala-tenants/site/index.html"
+                        <a href="https://ticket-masala-demos.fly.dev/" class="btn btn-glow btn-lg rounded-pill px-5 py-3 fw-bold" data-i18n="btn_explore_demos"> Explore Live Demos </a>
+                        <a href="https://ticket-masala-demos.fly.dev/"
                             class="btn btn-glass btn-lg rounded-pill px-4 py-3">
                             <i class="fas fa-desktop me-2"></i> View Demos
                         </a>
@@ -352,8 +347,8 @@
                                     data-i18n="solution_multitenant_point2">Custom themes & domain logic via YAML</span>
                             </li>
                             <li><i class="fas fa-external-link-alt text-primary me-2"></i><a
-                                    href="../ticket-masala-tenants/site/index.html"
-                                    class="text-primary text-decoration-none fw-bold"
+                                    href="https://ticket-masala-demos.fly.dev/"
+                                    class="btn btn-sm btn-primary rounded-pill mt-2"
                                     data-i18n="solution_multitenant_point3">Launch the Multiverse</a>
                             </li>
                         </ul>
@@ -688,6 +683,7 @@
                 hero_desc_3: "for your business.",
                 btn_start_trial: "Start Free Trial",
                 btn_view_demos: "View Demos",
+                btn_explore_demos: "Explore Live Demos",
                 features_title_1: "Built for",
                 features_title_2: "Modern Teams",
                 features_subtitle: "Everything you need to ship faster and stay organized.",
@@ -704,7 +700,6 @@
                 solution_automation_desc: "Automate repetitive tasks with AI-powered detection and classification. GERDA AI identifies patterns, flags anomalies, and suggests actions based on historical data.",
                 solution_automation_point1: "Automated pattern detection",
                 solution_automation_point2: "Cross-reference multiple data sources",
-                solution_automation_point3: "Impact tracking & forecasting",
                 solution_automation_point3: "Impact tracking & forecasting",
                 solution_multitenant_title: "The Multiverse Showcase",
                 solution_multitenant_desc: "Experience adaptive multi-tenancy. Four distinct industries—Government, Infrastructure, Tech, and Research—running on a single instance.",
@@ -729,7 +724,7 @@
                 arch_dotnet_badge: ".NET 10 + Blazor",
                 arch_ef_badge: "Entity Framework Core",
                 arch_plugin_title: "Plugin Architecture",
-                arch_plugin_desc: "Add new tax domains without touching core code",
+                arch_plugin_desc: "Add new business domains without touching core code",
                 arch_config_title: "Configuration-Driven",
                 arch_config_desc: "All business logic defined in YAML, not hardcoded",
                 arch_sidecar_title: "Sidecar Pattern",
@@ -764,6 +759,7 @@
                 hero_desc_3: "voor uw bedrijf.",
                 btn_start_trial: "Start Gratis Proefversie",
                 btn_view_demos: "Bekijk Demo's",
+                btn_explore_demos: "Bekijk Live Demo's",
                 features_title_1: "Gebouwd voor",
                 features_title_2: "Moderne Teams",
                 features_subtitle: "Alles wat u nodig heeft om sneller te leveren en georganiseerd te blijven.",
@@ -804,12 +800,12 @@
                 arch_dotnet_desc: "Volledig gebouwd op .NET 10 met Blazor voor rijke, interactieve UI's. Een modulaire monoliet architectuur die de eenvoud van een enkele deployment combineert met de flexibiliteit van pluggable domeinmodules.",
                 arch_dotnet_badge: ".NET 10 + Blazor",
                 arch_ef_badge: "Entity Framework Core",
-                arch_plugin_title: "Universele Entiteiten",
-                arch_plugin_desc: "Eisen gekoppeld aan generieke modellen",
+                arch_plugin_title: "Plugin Architecture",
+                arch_plugin_desc: "Voeg nieuwe bedrijfsdomeinen toe zonder de kerncode aan te raken",
                 arch_config_title: "Configuratiegestuurd",
                 arch_config_desc: "Bedrijfslogica in YAML, niet hardcoded",
-                arch_sidecar_title: "GERDA AI",
-                arch_sidecar_desc: "Geïntegreerde beslissingsagent kern",
+                arch_sidecar_title: "Sidecar Pattern",
+                arch_sidecar_desc: "Never write to legacy systems directly",
                 arch_tenant_title: "Echte Multi-Tenancy",
                 arch_tenant_desc: "Volledige isolatie met aangepaste branding per tenant",
                 how_title: "Eén Kern.",
@@ -840,6 +836,7 @@
                 hero_desc_3: "pour votre entreprise.",
                 btn_start_trial: "Essai Gratuit",
                 btn_view_demos: "Voir les Démos",
+                btn_explore_demos: "Explorer les Démos Live",
                 features_title_1: "Conçu pour",
                 features_title_2: "Équipes Modernes",
                 features_subtitle: "Tout ce dont vous avez besoin pour livrer plus rapidement et rester organisé.",
@@ -880,12 +877,12 @@
                 arch_dotnet_desc: "Entièrement construit sur .NET 10 avec Blazor pour des UI riches et interactives. Une architecture monolithe modulaire qui combine la simplicité d'un déploiement unique avec la flexibilité de modules de domaine enfichables.",
                 arch_dotnet_badge: ".NET 10 + Blazor",
                 arch_ef_badge: "Entity Framework Core",
-                arch_plugin_title: "Universal Entities",
-                arch_plugin_desc: "Requirements mapped to generic models",
+                arch_plugin_title: "Plugin Architecture",
+                arch_plugin_desc: "Ajouter de nouveaux domaines d'affaires sans toucher au code principal",
                 arch_config_title: "Config-Driven",
                 arch_config_desc: "Business logic in YAML, not code",
-                arch_sidecar_title: "GERDA AI",
-                arch_sidecar_desc: "Embedded decision agent core",
+                arch_sidecar_title: "Sidecar Pattern",
+                arch_sidecar_desc: "Never write to legacy systems directly",
                 arch_tenant_title: "Vrai Multi-Tenancy",
                 arch_tenant_desc: "Isolation complète avec branding personnalisé par tenant",
                 how_title: "Un Cœur.",
