--- a/tenants/demos.html
+++ b/tenants/demos.html
@@ -239,7 +239,7 @@
 
         <div class="demo-grid">
             <!-- Tenant A: Desgoffe -->
-            <a href="http://localhost:8091/Identity/Account/Login" class="demo-card desgoffe">
+            <a href="https://ticket-masala-demos.fly.dev/" class="demo-card desgoffe">
                 <div class="card-header">
                     <img src="assets/desgoffe.png" alt="Desgoffe Logo" class="tenant-logo">
                     <div class="card-number">Tenant A</div>
@@ -259,7 +259,7 @@
             </a>
 
             <!-- Tenant B: Whitman -->
-            <a href="http://localhost:8092/Identity/Account/Login" class="demo-card whitman">
+            <a href="https://ticket-masala-demos.fly.dev/" class="demo-card whitman">
                 <div class="card-header">
                     <img src="assets/whitman.png" alt="Whitman Logo" class="tenant-logo">
                     <div class="card-number">Tenant B</div>
@@ -279,7 +279,7 @@
             </a>
 
             <!-- Tenant C: Liberty -->
-            <a href="http://localhost:8093/Identity/Account/Login" class="demo-card liberty">
+            <a href="https://ticket-masala-demos.fly.dev/" class="demo-card liberty">
                 <div class="card-header">
                     <img src="assets/liberty.png" alt="Liberty Logo" class="tenant-logo">
                     <div class="card-number">Tenant C</div>
@@ -299,7 +299,7 @@
             </a>
 
             <!-- Tenant D: Hennessey -->
-            <a href="http://localhost:8094/Identity/Account/Login" class="demo-card hennessey">
+            <a href="https://ticket-masala-demos.fly.dev/" class="demo-card hennessey">
                 <div class="card-header">
                     <img src="assets/hennessey.png" alt="Hennessey Logo" class="tenant-logo">
                     <div class="card-number">Tenant D</div>
@@ -322,7 +322,7 @@
         <footer>
             <p>Ticket Masala: The Anderson Multiverse Demo Suite</p>
             <div style="margin-top: 1rem;">
-                <a href="../marketing-site/index.html">Homepage</a>
+                <a href="https://ticket-masala-marketing.fly.dev/">Homepage</a>
                 <a href="http://localhost:8001">Documentation</a>
                 <a href="https://github.com/yourusername/ticket-masala">GitHub</a>
             </div>
